--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -5,7 +5,15 @@ header{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+}
 
+nav {
+  position: fixed;
+  z-index: 5;
+  width: 100%;
+  margin:0 auto;
+  transition: all 0.3s ease;
 }
 
 .nav-container {
@@ -16,6 +24,11 @@ header{
   align-items: center;
   width: 1200px;
   margin: 0 auto;
+}
+
+nav.sticky {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.562);
 }
 
 .nav-container img {
@@ -37,7 +50,7 @@ header{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 80%;
+  height: 100%;
 }
 
 .hero-info h1{
@@ -46,10 +59,28 @@ header{
   letter-spacing: 5px;
   font-weight: 500;
   font-size: 46px;
+  background-color: #111;
 }
 
 .hero-info h2 {
   color: white;
   letter-spacing: 2px;
   font-weight: 300;
+
 }
+
+.cards {
+  height: 400px;
+  border: 1px solid red;
+}
+
+/* nav {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.fixed-nav nav {
+  position: fixed;
+  top:0;
+  z-index: 1;
+} */
