--- a/css/components/button.css
+++ b/css/components/button.css
@@ -3,6 +3,7 @@
   padding: 10px 20px;
   border-radius: 10px;
   margin-top: 20px;
+  transition: all 0.3s ease;
 }
 
 .contact-btn a {
@@ -10,4 +11,8 @@
   text-transform: uppercase;
   font-weight: 500;
   text-decoration: none;
+}
+
+.contact-btn:hover {
+  background-color: #f11a0b
 }
