--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -32,7 +32,7 @@ nav.sticky {
 }
 
 .nav-container img {
-  width: 125px;
+  width: 150px;
 }
 
 .nav-links {
@@ -51,6 +51,7 @@ nav.sticky {
   flex-direction: column;
   justify-content: center;
   height: 100%;
+  position: relative;
 }
 
 .hero-info h1{
@@ -69,18 +70,4 @@ nav.sticky {
 
 }
 
-.cards {
-  height: 400px;
-  border: 1px solid red;
-}
 
-/* nav {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.fixed-nav nav {
-  position: fixed;
-  top:0;
-  z-index: 1;
-} */
