--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
 /* Components */
 @import url(./components/navbar.css);
 @import url(./components/button.css);
+@import url(./components/icons-header.css);
+@import url(./components/services-avatar.css);
 
 /* Globals */
 *{
