--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import url(./components/services-avatar.css);
 @import url(./components/counter.css);
 @import url(./components/cards.css);
+@import url(./components/footer.css);
 
 /* Globals */
 *{
