--- a/css/components/counter.css
+++ b/css/components/counter.css
@@ -1,27 +1,30 @@
 #counter {
-  height: 230px;
-  background-image: linear-gradient(90deg, rgba(231,67,54,1) 0%, rgba(219,39,25,0.6138830532212884) 65%), url(/images/pexels-pavel-danilyuk-6407552.jpg);
+  background-image: linear-gradient(
+      90deg,
+      rgba(231, 67, 54, 1) 0%,
+      rgba(219, 39, 25, 0.6138830532212884) 65%
+    ),
+    url(/images/pexels-pavel-danilyuk-6407552.jpg);
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
 
-.counter-container{
-  width: 1100px;
+.counter-container {
+  width: 100%;
+  max-width: 1100px;
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin: auto;
-  /* border: 1px solid blue; */
 }
 
-.counter-info-container{
-  height: 150px;
+.counter-info-container {
+  height: 200px;
   width: 200px;
-  /* border: 1px solid green; */
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -40,7 +43,7 @@
   font-size: 32px;
 }
 
-.counter-info-container p{
+.counter-info-container p {
   font-weight: 300;
   text-transform: uppercase;
 }
@@ -48,4 +51,45 @@
 .counter-container img {
   height: 40px;
   width: 40px;
+}
+
+/* .counter-box {
+  border: 1px solid white;
+} */
+
+@media screen and (max-width: 768px) {
+  .counter-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 100vh;
+  }
+
+  .counter-container{
+    height: 90vh;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  #counter {
+    height: 100vh;
+  }
+
+  .counter-container {
+    width: auto;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  .counter-info-container h5 {
+    font-weight: 700;
+    font-size: 30px;
+  }
+
+  .counter-info-container:last-child {
+    margin-bottom: 40px;
+  }
 }
