--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -27,6 +27,12 @@ header {
 .links {
   text-decoration: none;
   color: white;
+  transition: all 0.5s ease;
+}
+
+.links:hover {
+  color: red;
+  border-bottom: 1px solid red;
 }
 
 nav.sticky {
@@ -45,9 +51,8 @@ nav.sticky {
   width: 400px;
   list-style: none;
   font-weight: 600;
-  color: white;
-
 }
+
 
 .hero-info {
   align-items: center;
@@ -103,7 +108,7 @@ nav.sticky {
     position: absolute;
     right: 0px;
     height: 50vh;
-    top: 14vh;
+    top: 12.2vh;
     background-color: #e74336;
     display: flex;
     flex-direction: column;
